# fopro

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  dist-workspace.toml
.github/workflows/: release.yml  test.yml
src/: main.rs
