[package]
name = "fopro"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
futures-util = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
pretty-hex = "0.4.1"
rcgen = { version = "0.13.1", default-features = false, features = ["aws_lc_rs"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
